[gd_scene load_steps=13 format=2]

[ext_resource path="res://Tracker.gd" type="Script" id=1]
[ext_resource path="res://c64Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="AudioStreamGenerator" id=6]

[sub_resource type="AudioStreamGenerator" id=7]

[sub_resource type="AudioStreamGenerator" id=8]

[sub_resource type="AudioStreamGenerator" id=9]

[node name="Tracker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.917647, 0.807843, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1596.0
margin_bottom = 896.0
theme = ExtResource( 3 )
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_right = 1592.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = -32.0
theme = ExtResource( 3 )
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/TopPanel/HBoxContainer"]
margin_right = 39.0
margin_bottom = 32.0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.917647, 0.807843, 0.0901961, 1 )
custom_colors/font_color_pressed = Color( 0.443137, 0.384314, 0.0117647, 1 )
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetChannels" type="Button" parent="MarginContainer/VBoxContainer/TopPanel/HBoxContainer"]
margin_left = 71.0
margin_right = 305.0
margin_bottom = 32.0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.917647, 0.807843, 0.0901961, 1 )
custom_colors/font_color_pressed = Color( 0.443137, 0.384314, 0.0117647, 1 )
text = "Reset All Channels"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/TopPanel/HBoxContainer"]
margin_left = 337.0
margin_right = 1528.0
margin_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.917647, 0.807843, 0.0901961, 1 )
custom_colors/font_color_pressed = Color( 0.443137, 0.384314, 0.0117647, 1 )
text = "Quit :("
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChannelInfo" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 1592.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 48 )
theme = ExtResource( 3 )

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/ChannelInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = 4.0
theme = ExtResource( 3 )
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1588.0
margin_bottom = 44.0
theme = ExtResource( 3 )
custom_constants/separation = 8

[node name="Channel1" type="Panel" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer"]
margin_right = 390.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
theme = ExtResource( 3 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetChannel" type="Button" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel1/VBoxContainer"]
margin_top = 11.0
margin_right = 374.0
margin_bottom = 28.0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.917647, 0.807843, 0.0901961, 1 )
custom_colors/font_color_pressed = Color( 0.443137, 0.384314, 0.0117647, 1 )
text = "Set Channel"
clip_text = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Channel2" type="Panel" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer"]
margin_left = 398.0
margin_right = 788.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
theme = ExtResource( 3 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetChannel" type="Button" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel2/VBoxContainer"]
margin_top = 11.0
margin_right = 374.0
margin_bottom = 28.0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.917647, 0.807843, 0.0901961, 1 )
custom_colors/font_color_pressed = Color( 0.443137, 0.384314, 0.0117647, 1 )
text = "Set Channel"
clip_text = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Channel3" type="Panel" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer"]
margin_left = 796.0
margin_right = 1186.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
theme = ExtResource( 3 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetChannel" type="Button" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel3/VBoxContainer"]
margin_top = 11.0
margin_right = 374.0
margin_bottom = 28.0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.917647, 0.807843, 0.0901961, 1 )
custom_colors/font_color_pressed = Color( 0.443137, 0.384314, 0.0117647, 1 )
text = "Set Channel"
clip_text = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Channel4" type="Panel" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer"]
margin_left = 1194.0
margin_right = 1584.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
theme = ExtResource( 3 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetChannel" type="Button" parent="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel4/VBoxContainer"]
margin_top = 11.0
margin_right = 374.0
margin_bottom = 28.0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.917647, 0.807843, 0.0901961, 1 )
custom_colors/font_color_pressed = Color( 0.443137, 0.384314, 0.0117647, 1 )
text = "Set Channel"
clip_text = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 1592.0
margin_bottom = 892.0
size_flags_vertical = 3
theme = ExtResource( 3 )

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/Body"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = 4.0
theme = ExtResource( 3 )
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/MarginContainer3"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1588.0
margin_bottom = 800.0
theme = ExtResource( 3 )
custom_constants/separation = 8

[node name="Instruments" type="Panel" parent="MarginContainer/VBoxContainer/Body/MarginContainer3/HBoxContainer"]
margin_right = 390.0
margin_bottom = 796.0
size_flags_horizontal = 3
theme = ExtResource( 3 )

[node name="Instruments2" type="Panel" parent="MarginContainer/VBoxContainer/Body/MarginContainer3/HBoxContainer"]
margin_left = 398.0
margin_right = 788.0
margin_bottom = 796.0
size_flags_horizontal = 3
theme = ExtResource( 3 )

[node name="Instruments3" type="Panel" parent="MarginContainer/VBoxContainer/Body/MarginContainer3/HBoxContainer"]
margin_left = 796.0
margin_right = 1186.0
margin_bottom = 796.0
size_flags_horizontal = 3
theme = ExtResource( 3 )

[node name="Instruments4" type="Panel" parent="MarginContainer/VBoxContainer/Body/MarginContainer3/HBoxContainer"]
margin_left = 1194.0
margin_right = 1584.0
margin_bottom = 796.0
size_flags_horizontal = 3
theme = ExtResource( 3 )

[node name="Popups" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Popups"]
margin_left = 431.513
margin_top = 241.227
margin_right = 1166.51
margin_bottom = 644.228
theme = ExtResource( 3 )
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/home/odst/GodotProjects/QLSDTracker"
current_file = "c64Font.tres"
current_path = "/home/odst/GodotProjects/QLSDTracker/c64Font.tres"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Node2D" parent="."]

[node name="Sin" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource( 6 )
pitch_scale = 0.7

[node name="Square" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource( 7 )
pitch_scale = 0.7

[node name="Triangle" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource( 8 )
pitch_scale = 0.7

[node name="Generic" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource( 9 )
pitch_scale = 0.7
[connection signal="pressed" from="MarginContainer/VBoxContainer/TopPanel/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TopPanel/HBoxContainer/ResetChannels" to="." method="_on_ResetChannels_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TopPanel/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel1/VBoxContainer/SetChannel" to="." method="_on_SetChannel1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel2/VBoxContainer/SetChannel" to="." method="_on_SetChannel2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel3/VBoxContainer/SetChannel" to="." method="_on_SetChannel3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ChannelInfo/MarginContainer3/HBoxContainer/Channel4/VBoxContainer/SetChannel" to="." method="_on_SetChannel4_pressed"]
[connection signal="file_selected" from="Popups/FileDialog" to="." method="_on_FileDialog_file_selected"]
